# ferrite

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
crates/ferrite-cli/: Cargo.toml
crates/ferrite-cli/src/: args.rs  benchmark.rs  main.rs  model_acquisition.rs  profile.rs  run.rs
crates/ferrite-cli/tests/: generation_cli.rs  help_cli.rs  next_token_cli.rs  profile_cli.rs  q8_k_cli.rs
crates/ferrite-cli/tests/support/: fixtures.rs  mod.rs  q8_k.rs
crates/ferrite-fixtures/: Cargo.toml
crates/ferrite-fixtures/src/: chat_llama.rs  chat_templates.rs  gguf_writer.rs  lib.rs  scalar_llama.rs  scalar_llama_tensors.rs  scalar_phi3.rs
crates/ferrite-inference/: Cargo.toml
crates/ferrite-inference/src/: lib.rs  prefix_cache.rs  sampling.rs  scalar.rs  threading.rs
crates/ferrite-inference/src/prefix_cache/: store.rs
crates/ferrite-inference/src/scalar/: attention.rs  dense16.rs  float.rs  kernel_check.rs  kernels.rs  kv_store.rs  loader.rs  math.rs  matrix.rs  matvec.rs  memory.rs  neon_util.rs  options.rs  output.rs  profile.rs  prompt.rs  q4_k.rs  q4_k_avx2.rs  q4_k_neon.rs  q4_k_q8_k.rs  q4_k_q8_k_neon.rs  q4_k_q8_residual_i8mm.rs  q4_k_q8_residual_neon.rs  q5_0.rs  q5_0_avx2.rs  q5_0_neon.rs  q5_0_q8_residual_neon.rs  q5_k.rs  q6_k.rs  q6_k_avx2.rs  q6_k_neon.rs  q6_k_q8_k.rs  q6_k_q8_k_neon.rs  q6_k_q8_residual_i8mm.rs  q8_0.rs  q8_0_avx2.rs  q8_0_neon.rs  q8_0_q8_residual_i8mm.rs  q8_k.rs  q8_k_reference_tests.rs  (+7 more)
crates/ferrite-inference/tests/: batched_decode.rs  kv_store_backend_parity.rs  matvec_kernel_check.rs  scalar_context_limit.rs  scalar_profile.rs  scalar_prompt_cancellation.rs  scalar_reference.rs  scalar_session_cache.rs  token_prefix_cache.rs
crates/ferrite-inference/tests/support/: assertions.rs  fixtures.rs  mod.rs  models.rs
crates/ferrite-model/: Cargo.toml
crates/ferrite-model/src/: gguf.rs  gguf_config.rs  lib.rs  model_file.rs  tokenizer.rs
crates/ferrite-model/src/gguf/: reader.rs  types.rs
crates/ferrite-model/src/tokenizer/: bpe.rs  spm.rs
crates/ferrite-model/tests/: gguf_config.rs  gguf_reader.rs  tokenizer_metadata.rs
crates/ferrite-model/tests/support/: gguf.rs  mod.rs
crates/ferrite-server/: Cargo.toml
crates/ferrite-server/src/: config.rs  diagnostic_hash.rs  lib.rs  limits.rs  long_chat_gate.rs  main.rs  runtime.rs  state.rs
crates/ferrite-server/src/long_chat_gate/: artifacts.rs  config.rs  disconnect_probe.rs  error_probe.rs  identity.rs  queue_probe.rs  report.rs  result.rs  runner.rs  scenario.rs  state_capsule.rs  summary.rs  throughput.rs
crates/ferrite-server/src/openai/: auth.rs  auth_tests.rs  availability_tests.rs  catalog.rs  catalog_tests.rs  chat_content_part_validation_tests.rs  chat_message_tool_tests.rs  chat_message_validation_tests.rs  chat_metadata_validation_tests.rs  chat_option_tests.rs  chat_request_validation_tests.rs  completion_concurrency_tests.rs  completion_option_tests.rs  completion_prompt_validation_tests.rs  completion_unsupported_tests.rs  cors.rs  cors_tests.rs  error.rs  generation.rs  guards.rs  health_tests.rs  json.rs  mod.rs  prompt.rs  request_error_tests.rs  response_shape_assertions.rs  response_shape_tests.rs  response_stream_shape_tests.rs  responses_tests.rs  route_streaming_tests.rs  routes.rs  routes_tests.rs  schema.rs  seed_tests.rs  service_tier_tests.rs  stop_filter.rs  stop_sequences_tests.rs  stream_generation.rs  stream_lifecycle.rs  stream_obfuscation_options_tests.rs  (+9 more)
crates/ferrite-server/src/runtime/: cache_options.rs  cache_trace.rs  json_grammar.rs  prefix_cache.rs  scheduler.rs
crates/ferrite-server/src/throughput_client/: config.rs  http.rs  mod.rs  rss.rs  streaming_finish.rs  streaming_metrics.rs  streaming_text.rs  streaming_token_ids.rs  streaming_usage.rs  tests.rs
crates/ferrite-server/tests/: help_cli.rs  long_chat_gate.rs  openai_client.rs  openai_client_catalog.rs  openai_client_chat.rs  openai_client_completions.rs  openai_client_real_tier0.rs  openai_client_real_tier1.rs  openai_client_real_tier1_catalog.rs  openai_client_real_tier1_qwen_1_5b.rs  openai_client_real_tier1_qwen_1_5b_q6.rs  openai_client_real_tier1_qwen_1_5b_q8_long_chat.rs  openai_client_real_tier1_qwen_1_5b_q8_long_completion.rs  openai_client_real_tier1_smollm_1_7b.rs  openai_clients.rs  openai_http.rs  openai_http_throughput.rs  openai_real_model_http.rs  openai_real_phi3.rs  openai_real_tier1_catalog.rs  openai_real_tier1_http.rs  openai_real_tier1_qwen_1_5b_http.rs  openai_real_tier1_qwen_1_5b_prompts.rs  openai_real_tier1_qwen_1_5b_q6_prompts.rs  openai_real_tier1_qwen_1_5b_q6_queue.rs  openai_real_tier1_qwen_1_5b_q6_stop.rs  openai_real_tier1_qwen_1_5b_q6_streaming_prompts.rs  openai_real_tier1_qwen_1_5b_q8_long_completion_stream.rs  openai_real_tier1_qwen_1_5b_q8_long_queue.rs  openai_real_tier1_qwen_1_5b_q8_long_stream.rs  openai_real_tier1_qwen_1_5b_q8_stop.rs  openai_real_tier1_qwen_1_5b_queue.rs  openai_real_tier1_qwen_1_5b_streaming_prompts.rs  openai_real_tier1_qwen_1_5b_throughput.rs  openai_real_tier1_smollm_1_7b_chat.rs  openai_real_tier1_smollm_1_7b_prompts.rs  openai_real_tier1_smollm_1_7b_stop.rs  openai_real_tier1_smollm_1_7b_stop_prompts.rs  openai_real_tier1_smollm_1_7b_streaming.rs  openai_real_tier1_stop.rs  (+2 more)
crates/ferrite-server/tests/openai_clients/: openai_client_catalog.rs  openai_client_chat.rs  openai_client_completions.rs
crates/ferrite-server/tests/real_models/: openai_client_real_tier0.rs  openai_client_real_tier1.rs  openai_client_real_tier1_catalog.rs  openai_client_real_tier1_qwen_1_5b.rs  openai_client_real_tier1_qwen_1_5b_q6.rs  openai_client_real_tier1_qwen_1_5b_q8_long_chat.rs  openai_client_real_tier1_qwen_1_5b_q8_long_completion.rs  openai_client_real_tier1_smollm_1_7b.rs  openai_real_model_http.rs  openai_real_phi3.rs  openai_real_tier1_catalog.rs  openai_real_tier1_http.rs  openai_real_tier1_qwen_1_5b_http.rs  openai_real_tier1_qwen_1_5b_prompts.rs  openai_real_tier1_qwen_1_5b_q6_prompts.rs  openai_real_tier1_qwen_1_5b_q6_queue.rs  (+15 more)
(+1029 files in other folders)
