[workspace]
members = [
    "crates/ferrite-cli",
    "crates/ferrite-fixtures",
    "crates/ferrite-inference",
    "crates/ferrite-model",
    "crates/ferrite-server",
]
resolver = "3"

[workspace.package]
authors = ["Victor Bona"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/vicotrbb/ferrite"
rust-version = "1.96"

[workspace.dependencies]
ferrite-fixtures = { version = "0.2.0", path = "crates/ferrite-fixtures" }
ferrite-inference = { version = "0.2.0", path = "crates/ferrite-inference" }
ferrite-model = { version = "0.2.0", path = "crates/ferrite-model" }
memmap2 = "0.9"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"
collection_is_never_read = "deny"
dbg_macro = "deny"
inefficient_to_string = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
needless_collect = "deny"
panic = "deny"
rc_buffer = "deny"
redundant_clone = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
