[package]
name = "ferrite-fixtures"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = ["crates-io"]
description = "In-memory GGUF fixtures for Ferrite tests"
readme = "../../README.md"
keywords = ["llm", "inference", "gguf", "testing"]
categories = ["development-tools::testing", "science"]

[lib]
name = "ferrite_fixtures"
path = "src/lib.rs"

[lints]
workspace = true
