[package]
name = "ferrite-inference"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CPU-native GGUF inference kernels and runtime for Ferrite"
readme = "../../README.md"
keywords = ["llm", "inference", "cpu", "gguf", "simd"]
categories = ["science", "hardware-support", "algorithms"]

[lib]
name = "ferrite_inference"
path = "src/lib.rs"

[dependencies]
ferrite-model.workspace = true
rayon = "1.10"
locus-alloc = { version = "0.1.0", optional = true }
bytemuck = { version = "1", optional = true }

[dev-dependencies]
ferrite-fixtures.workspace = true

[features]
locus-kv = ["dep:locus-alloc", "dep:bytemuck"]

[lints]
workspace = true
