[package]
name = "ferrite-model"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GGUF parsing and tokenization for the Ferrite inference engine"
readme = "../../README.md"
keywords = ["llm", "gguf", "tokenizer", "inference", "parser"]
categories = ["parser-implementations", "science"]

[lib]
name = "ferrite_model"
path = "src/lib.rs"

[dependencies]
memmap2.workspace = true

[dev-dependencies]
ferrite-fixtures.workspace = true

[lints]
workspace = true
