[package]
name = "ferrite-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ferrite_server"
path = "src/lib.rs"

[[bin]]
name = "ferrite-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
ferrite-inference = { path = "../ferrite-inference" }
ferrite-model = { path = "../ferrite-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
async-openai = { version = "0.41.1", default-features = false, features = ["chat-completion", "model"] }
ferrite-fixtures = { path = "../ferrite-fixtures" }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
