[package]
name = "ferrite-server"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
autotests = false
description = "OpenAI-compatible HTTP serving for the Ferrite inference engine"
readme = "../../README.md"
keywords = ["llm", "inference", "openai", "http", "server"]
categories = ["web-programming::http-server", "science"]

[lib]
name = "ferrite_server"
path = "src/lib.rs"

[[bin]]
name = "ferrite-server"
path = "src/main.rs"

[[test]]
name = "help_cli"
path = "tests/help_cli.rs"

[[test]]
name = "long_chat_gate"
path = "tests/long_chat_gate.rs"

[[test]]
name = "openai_clients"
path = "tests/openai_clients.rs"

[[test]]
name = "openai_http"
path = "tests/openai_http.rs"

[[test]]
name = "openai_http_throughput"
path = "tests/openai_http_throughput.rs"

[[test]]
name = "real_models"
path = "tests/real_models.rs"

[[test]]
name = "tool_metadata_cli"
path = "tests/tool_metadata_cli.rs"

[dependencies]
axum = "0.8"
ferrite-inference.workspace = true
ferrite-model.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
async-openai = { version = "0.41.1", default-features = false, features = ["chat-completion", "completions", "model"] }
ferrite-fixtures.workspace = true
sha2 = "0.10"
tower = { version = "0.5", features = ["util"] }

[features]
locus-kv = ["ferrite-inference/locus-kv"]

[lints]
workspace = true
